# vlm_eval

./: .gitignore  README.md  pyproject.toml
data/: line_predictions.csv
examples/: config.example.yaml  config_test.yaml  config_test_claude.yaml
outputs/: results_testsuite_gemini_31_pro.csv
scripts/: gemini_line_tasks.py
src/vlm_eval/: __init__.py  cli.py  clients.py  config.py  evaluator.py  metrics.py  models.py  pagexml.py
src/vlm_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_clients.py  test_evaluator.py  test_metrics.py  test_pagexml.py
