[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-eval"
version = "0.1.0"
description = "Evaluate proprietary and open VLM APIs on historical Swedish handwriting PAGE XML datasets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "VLM Eval" }]
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "click>=8.1.7",
  "google-genai"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
vlm-eval = "vlm_eval.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
