[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-eval"
version = "0.1.0"
description = "Evaluate proprietary and open VLM APIs on historical Swedish handwriting PAGE XML datasets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "VLM Eval" }]
dependencies = [
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "click>=8.1.7",
  "google-genai",
  "openai>=1.0.0",
  "anthropic>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
vlm-eval = "vlm_eval.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
